Correct spacing in modal

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,20 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  flex-direction: row;
+  padding: 16px;
+}
+
+.header {
+  font-weight: bold;
+  font-size: larger;
+}
+
+.top {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .icon {
@@ -33,6 +47,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+  margin-right: 16px;
+}
+
+.text {
+  margin-bottom: 16px;
+  margin-top: 8px;
 }
 
 .close-button {
